edited image location

--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
     <a href="....." class="btn mt-3 p-3">See my projects</a>
 </div>
       <div class="col-lg-6">
-    <img src="croissant.jpg" width="100%" class="rounded-4">
+    <img src="imgs/croissant.jpg" width="100%" class="rounded-4">
     </div>
     </div>
     </div>
+
+    <a href="work.html">Next page</a>
 </body>
 </html>
