--- a/contact.html
+++ b/contact.html
@@ -26,5 +26,7 @@
         <a href="https://www.instagram.com">@aniyak</a>
     </p>
     </div>
+
+    <a href="home.html">HOME</a>
 </body>
 </html>
