--- a/home.html
+++ b/home.html
@@ -132,8 +132,26 @@ h3 {
 </div>
     </div>
   </div>
-    </div>
+   </div>
+   <br>
+  <footer>
+<a href="mailto:aniyakhawaja08@icloud.com">
+    aniyakhawaja08@icloud.com
+</a>
+<div class="social links">
+    <a href="">
+       <i class="fa-brands fa-github" style="color: #6c0ff5;"></i>
+    </a>
+<a href="">
+    <i class="fa-brands fa-instagram" style="color: #6c0ff5;"></i>
+</a>
+<a href="">
+   <i class="fa-brands fa-twitter" style="color: #6c0ff5;"></i>
+</a>
+</div>
+  </footer>
   </div>
+  
 </body>
 </html>
 
