--- a/home.html
+++ b/home.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script> 
+    <script src="https://kit.fontawesome.com/a778d53e9b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
+
 <style>
+    :root {
+        --bg-primary: rgb(249, 247, 254);
+    }
     .head {
-        background-color: #5C9EAD;
+        background-color:var(--bg-primary);
         padding: 200px 120px;
 
     }
@@ -54,6 +59,38 @@ h3 {
 
 .nav-link:hover {
     color: rgb(108, 99, 255);
+}
+
+.footer-btn {
+    padding-bottom: 80px;
+    text-decoration: none;
+}
+
+.contact-btn {
+    text-align: center;
+    font-size: 20px;
+    text-decoration: none;
+    color: white;
+    border-radius: 5px;
+    background-color:rgb(108, 99, 255) ;
+    padding: 20px 35px;
+    margin-left: 400px;
+}
+
+.email {
+    display: flex;
+    justify-content: center;
+    text-decoration: none;
+    color: black;
+    font-size: 28px;
+}
+.email:hover {
+    color: rgb(108, 99, 255) ;
+}
+.banner {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    background-color: var(--bg-primary);
+    padding: 20px 50px;
 }
 </style>
 <body>
@@ -135,18 +172,30 @@ h3 {
    </div>
    <br>
   <footer>
-<a href="mailto:aniyakhawaja08@icloud.com">
+    <div class="container banner">
+        <div class="row">
+<div class="col-lg-6">
+    <h4 class="fs-1 fw-bold">Work Inquiry</h4> 
+    <p class="text-muted fs-5">Let's work together</p>
+</div>
+<div class="col-lg-6 mt-5">
+    <a href="contact.html" class="contact-btn">Contact me</a>
+</div>
+    </div>
+    </div>
+<a href="mailto:aniyakhawaja08@icloud.com" class="email mt-5">
     aniyakhawaja08@icloud.com
 </a>
-<div class="social links">
-    <a href="">
-       <i class="fa-brands fa-github" style="color: #6c0ff5;"></i>
+
+<div class="social links ">
+    <a href="github.com">
+<i class="fa-brands fa-github" style="color: #6c63ff;"></i>
     </a>
-<a href="">
-    <i class="fa-brands fa-instagram" style="color: #6c0ff5;"></i>
+<a href="instagram.com">
+   <i class="fa-brands fa-instagram" style="color: #6c63ff;"></i>
 </a>
 <a href="">
-   <i class="fa-brands fa-twitter" style="color: #6c0ff5;"></i>
+  <i class="fa-brands fa-twitter" style="color: #6c63ff;"></i>
 </a>
 </div>
   </footer>
