--- a/home.html
+++ b/home.html
@@ -92,6 +92,20 @@ h3 {
     background-color: var(--bg-primary);
     padding: 20px 50px;
 }
+
+ .social-links a {
+ margin: 50px 30px;
+font-size: 20px;
+color: rgb(108, 99, 255);
+background-color:#f9f7fe;
+border-radius: 75px;
+padding: 18px 20px;
+
+}
+.social-links a:hover {
+    background-color: rgb(108, 99, 255);
+    color: white;
+}
 </style>
 <body>
      <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -187,15 +201,15 @@ h3 {
     aniyakhawaja08@icloud.com
 </a>
 
-<div class="social links ">
-    <a href="github.com">
-<i class="fa-brands fa-github" style="color: #6c63ff;"></i>
+<div class="social-links d-flex justify-content-center">
+    <a href="https://github.com/AniyaKhawaja" target="_blank">
+<i class="fa-brands fa-github"></i>
     </a>
-<a href="instagram.com">
-   <i class="fa-brands fa-instagram" style="color: #6c63ff;"></i>
+<a href="https://www.instagram.com" target="_blank">
+   <i class="fa-brands fa-instagram" ></i>
 </a>
-<a href="">
-  <i class="fa-brands fa-twitter" style="color: #6c63ff;"></i>
+<a href="https://x.com" target="_blank">
+  <i class="fa-brands fa-twitter" ></i>
 </a>
 </div>
   </footer>
