target blank attribute

--- a/home.html
+++ b/home.html
@@ -202,13 +202,13 @@ padding: 18px 20px;
 </a>
 
 <div class="social-links d-flex justify-content-center">
-    <a href="https://github.com/AniyaKhawaja" target="_blank">
+    <a href="https://github.com">
 <i class="fa-brands fa-github"></i>
     </a>
-<a href="https://www.instagram.com" target="_blank">
+<a href="https://www.instagram.com">
    <i class="fa-brands fa-instagram" ></i>
 </a>
-<a href="https://x.com" target="_blank">
+<a href="https://x.com">
   <i class="fa-brands fa-twitter" ></i>
 </a>
 </div>
