--- a/index.html
+++ b/index.html
@@ -10,30 +10,27 @@
 
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid">
-    <a class="navbar-brand"> <img src="imgs/logo.png" width="25%"  ></a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="work.html">Work</a>
-        </li>
-        <li class="nav-item">
-             <a class="nav-link" href="contact.html">Contact</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
+      <div class="container">
+     <nav class="d-flex justify-content-between">
+       
+        <img src="imgs/logo.png" width="10%">
+        <ul>
+            <li class="active">
+                <a href="home.html">Home </a>
+            
+                </li>
+            <li>
+                 <a href="index.html">About </a>
+            </li>
+            <li>
+                 <a href="work.html">Work </a>
+            </li>
+            <li>
+                 <a href="contact.html">Contact </a>
+            </li>
+        </ul>
+     </nav>
+      </div>
 <br>
     <div class="about-section container">
     <div class="row">
@@ -49,6 +46,6 @@
     </div>
     </div>
 
-    <a href="work.html">Next page</a>
+   
 </body>
 </html>
