--- a/work.html
+++ b/work.html
@@ -51,11 +51,11 @@ nav a:hover, li.active a  {
         <img src="imgs/logo.png" width="10%">
         <ul>
             <li class="active">
-                <a href="home.html">Home </a>
+                <a href="index.html">Home </a>
             
                 </li>
             <li>
-                 <a href="index.html">About </a>
+                 <a href="about.html">About </a>
             </li>
             <li>
                  <a href="work.html">Work </a>
