--- a/about.html
+++ b/about.html
@@ -7,34 +7,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css">
     <title>Document</title>
+
 </head>
-<style>
-    nav ul {
-    padding: 0;
-    margin: 0;
-    
-}
-nav li{
- display: inline;
- list-style: none;
- line-height: 42px;
- margin-left: 15px;
- 
-}
-
-nav a{
-    text-decoration: none;
-    color: black;
-    font-weight: bolder;
-}
-
-nav a:hover, li.active a  {
-   
-    color: rgb(109, 99, 255);
-}
-</style>
 <body>
-     <div class="container">
+      <div class="container">
      <nav class="d-flex justify-content-between">
        
         <img src="imgs/logo.png" width="10%">
@@ -55,24 +31,21 @@ nav a:hover, li.active a  {
         </ul>
      </nav>
       </div>
-
-    <h1 class="fw-bold mt-5 text-center p-5">Let's get in touch!</h1>
-    <div class="p-5">
-    <h2>Email</h2>
-   <p> 
-        <a href="mailto:aniyakhawaja08@icloud.com">aniyakhawaja08@icoud.com</a>
-    </p>
-    <br>
-     <h2>Twitter</h2>
-    <p> 
-        <a href="https://x.com">@aniyak</a>
-    </p>
-    <br>
-     <h2>Instagram</h2>
-    <p> 
-        <a href="https://www.instagram.com">@aniyak</a>
-    </p>
+<br>
+    <div class="about-section container">
+    <div class="row">
+        <div class="col-lg-6">
+    <h1>Hi I am Aniya Khawaja</h1>
+    <h2 class="fw-bold mt-3">Frontend Developer, based in Lebanon</h2>
+    <p class="mt-3">For anyone who wants to start learning code, this workshop is very interesting. You will be challenged with different exercises, and everything is well explained, homework and deadlines are good for keep focus</p>
+    <a href="....." class="btn mt-3 p-3">See my projects</a>
+</div>
+      <div class="col-lg-6">
+    <img src="imgs/croissant.jpg" width="100%" class="rounded-4">
+    </div>
+    </div>
     </div>
 
+   
 </body>
 </html>
