--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script> 
     <script src="https://kit.fontawesome.com/a778d53e9b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>Front End Developer - Aniya Khawaja</title>
 </head>
 
 <style>
@@ -153,17 +153,17 @@ margin-left:  150px ;
                 <img src="imgs/logo-small.jpg" width="10%" class=" d-block d-md-none ">
         <ul>
             <li class="active">
-                <a href="index.html">Home </a>
+                <a href="index.html" title="homepage">Home </a>
             
                 </li>
             <li>
-                 <a href="about.html">About </a>
+                 <a href="about.html" title="about">About </a>
             </li>
             <li>
-                 <a href="work.html">Work </a>
+                 <a href="work.html" title="work">Work </a>
             </li>
             <li>
-                 <a href="contact.html">Contact </a>
+                 <a href="contact.html" title="contact">Contact </a>
             </li>
         </ul>
      </nav>
